# vietnam-calendar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  REQUIREMENTS.md  TECHNICAL_DESIGN.md  compose.yaml  index.html
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 57ef74b846aa_initial_schema_phase1.py  6a4d96c28f31_phase5_feed_version.py  a91d6c42f3b0_ai_run_job_attempt.py  c1e5f00d4a42_phase4_cluster_candidates.py  d7f31a8be901_phase4_review_invariants.py  e82b67d194fa_phase4_race_invariants.py  f52339e6d32a_phase5_calendar_index.py
backend/src/vietnam_calendar/: __init__.py  analysis.py  api.py  bootstrap.py  collection.py  config.py  db.py  events.py  jobs.py  models.py  scheduler.py  security.py  worker.py
backend/src/vietnam_calendar/application/: __init__.py  ai.py  assets.py  evals.py  importance.py
backend/src/vietnam_calendar/assets/: __init__.py  event-analysis-v1.txt  importance-rubric-v1.md
backend/tests/contract/: test_ai_contract.py  test_phase0_assets.py  test_provider_http_spikes.py
backend/tests/integration/: test_phase2_postgres.py  test_phase3_postgres.py  test_phase4_postgres.py
backend/tests/unit/: test_api_hardening.py  test_bootstrap_config.py  test_health.py  test_jobs.py  test_phase3_enqueue_race.py  test_phase3_eval.py  test_phase3_providers.py  test_phase4_events.py  test_phase5_api.py  test_phase5_feed_mutations.py  test_rss_collection.py  test_schema_contract.py  test_security.py  test_worker_heartbeat.py
(+32 files in other folders)
